--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
             });
 
             // Отправка данных на сервер
-            const response = await fetch('https://wtsx43-85-172-77-38.ru.tuna.am/tg1/telegram/webhook', {
+            const response = await fetch('https://bp9t7b-85-172-77-38.ru.tuna.am/tg1/telegram/webhook', {
                 method: 'POST',
                 body: formData
             });
