--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             if (result.ok) {
                 tg.showPopup({
                     title: 'Успех',
-                    message: `Фотосъемка успешно отправлена! Загружено ${selectedFiles.length} фото.`,
+                    message: `Фотосъемка успешно отправлена!`,
                     buttons: [{ type: 'ok' }]
                 }, () => tg.close());
             } else {
