--- a/index.html
+++ b/index.html
@@ -364,14 +364,25 @@
 
         try {
             const formData = new FormData(form);
+            formData.append('title', titleInput.value.trim());
+            formData.append('author', authorInput.value.trim());
+            formData.append('date', dateInput.value);
+            formData.append('tags', tagsInput.value.trim());
+            formData.append('userId', descriptionInput.value.trim());
+            formData.append('username', userIdField.value.trim());
+            formData.append('description', usernameField.value.trim());
 
             // Добавляем все фото отдельно (для совместимости)
             selectedFiles.forEach((file, index) => {
                 formData.append(`photos_${index}`, file);
             });
 
+            const httpsDomen = 'https://gsb7hr-85-172-77-38.ru.tuna.am';
+            const api = '/tg1/telegram/webhook';
+            const url = httpsDomen + api;
+
             // Отправка данных на сервер
-            const response = await fetch('https://bkyedb-85-172-77-38.ru.tuna.am/tg1/telegram/webhook', {
+            const response = await fetch(url, {
                 method: 'POST',
                 body: formData
             });
