--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         // Заполняем данные пользователя
         const user = tg.initDataUnsafe.user || {};
         userIdField.value = user.id || '';
-        usernameField.value = user.name || '';
+        usernameField.value = user.displayName || '';
 
         // Устанавливаем текущую дату по умолчанию
         dateInput.valueAsDate = new Date();
