--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <form id="photoForm">
         <!-- Скрытые поля с данными пользователя -->
-        <input type="hidden" id="userId" name="user_id" class="hidden-field">
+        <input type="hidden" id="userId" name="userId" class="hidden-field">
         <input type="hidden" id="username" name="username" class="hidden-field">
 
         <div class="form-group">
@@ -174,7 +174,7 @@
 
         <div class="form-group">
             <label for="dateInput">Дата съемки</label>
-            <input type="date" id="dateInput">
+            <input type="text" id="dateInput" placeholder="дд.мм.гггг" pattern="\d{2}\.\d{2}\.\d{4}">
         </div>
 
         <div class="form-group">
@@ -241,8 +241,12 @@
         userIdField.value = user.id || '';
         usernameField.value = user.username ? `@${user.username}` : '';
 
-        // Устанавливаем текущую дату по умолчанию
-        dateInput.valueAsDate = new Date();
+        // Устанавливаем текущую дату по умолчанию в формате d.m.Y
+        const today = new Date();
+        const day = String(today.getDate()).padStart(2, '0');
+        const month = String(today.getMonth() + 1).padStart(2, '0');
+        const year = today.getFullYear();
+        dateInput.value = `${day}.${month}.${year}`;
     });
 
     // Обработчики событий
