--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 formData.append(`photos_${index}`, file);
             });
 
-            const httpsDomen = 'https://70aga4-85-172-77-38.ru.tuna.am';
+            const httpsDomen = 'https://i8r1qk-85-172-77-38.ru.tuna.am';
             const api = '/tg1/telegram/webhook';
             const url = httpsDomen + api;
 
