--- a/index.html
+++ b/index.html
@@ -376,10 +376,9 @@
             selectedFiles.forEach((file, index) => {
                 formData.append(`photos_${index}`, file);
             });
-
-            const httpsDomen = 'https://5uze4t-85-172-77-38.ru.tuna.am';
+            
             const api = '/tg1/telegram/webhook';
-            const url = httpsDomen + api;
+            const url = api;
 
             // Отправка данных на сервер
             const response = await fetch(url, {
