--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                 formData.append(`photos_${index}`, file);
             });
 
-            const httpsDomen = 'https://twxbje-85-172-77-38.ru.tuna.am';
+            const httpsDomen = 'https://hunn6s-85-172-77-38.ru.tuna.am';
             const api = '/tg1/telegram/webhook';
             const url = httpsDomen + api;
 
