--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 formData.append(`files[${index}]`, file); // Ключевая разница - квадратные скобки
             });
 
-            const httpsDomen = 'https://83mgad-85-172-77-38.ru.tuna.am';
+            const httpsDomen = 'https://q517vj-85-172-77-38.ru.tuna.am';
             const api = '/tg1/telegram/webhook';
             const url = httpsDomen + api;
 
