--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 formData.append(`files[${index}]`, file); // Ключевая разница - квадратные скобки
             });
 
-            const httpsDomen = 'https://gwyx7k-85-172-77-38.ru.tuna.am';
+            const httpsDomen = 'https://ks5fe9-85-172-77-38.ru.tuna.am';
             const api = '/tg1/telegram/webhook';
             const url = httpsDomen + api;
 
