--- a/index.html
+++ b/index.html
@@ -378,8 +378,8 @@
                 formData.append(`files[${index}]`, file); // Ключевая разница - квадратные скобки
             });
 
-            const httpsDomen = 'https://swbjdp-85-172-77-38.ru.tuna.am';
-            const api = '/tg1/telegram/webhook';
+            const httpsDomen = 'https://l1wsbr-85-172-77-38.ru.tuna.am';
+            const api = '/tg1/telegram/webhook/photo';
             const url = httpsDomen + api;
 
             // Отправка данных на сервер
