--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 formData.append(`files[${index}]`, file); // Ключевая разница - квадратные скобки
             });
 
-            const httpsDomen = 'https://5u5iuz-94-25-68-186.ru.tuna.am';
+            const httpsDomen = 'https://g123o9-94-25-68-186.ru.tuna.am';
             const api = '/tg1/telegram/webhook/photo';
             const url = httpsDomen + api;
 
